# kevinbotlib-theme

./: README.md  pyproject.toml
kevinbotlib_theme/: __init__.py  _main.py  _proxy_style.py  _style_loader.py  _util.py
kevinbotlib_theme/_icon/: icon_engine.py  svg.py
kevinbotlib_theme/_os_appearance/: __init__.py  listener.py
kevinbotlib_theme/_os_appearance/_accent/: __init__.py
kevinbotlib_theme/_resources/: __init__.py  colors.py  palette.py  standard_icons.py  stylesheets.py
kevinbotlib_theme/_template/: engine.py  filter.py
kevinbotlib_theme/qtpy/: __init__.py  qt_version.py
kevinbotlib_theme/qtpy/QtCore/: __init__.py
kevinbotlib_theme/qtpy/QtGui/: __init__.py
kevinbotlib_theme/qtpy/QtSvg/: __init__.py
kevinbotlib_theme/qtpy/QtWidgets/: __init__.py
kevinbotlib_theme/widget_gallery/: __init__.py  __main__.py  main_window.py
kevinbotlib_theme/widget_gallery/_ui/: dock_ui.py  frame_ui.py  icons_ui.py  mdi_ui.py  widgets_ui.py
qdarktheme/_resources/: stylesheets.py
style/: base.qss
style/colors/themes/: dark.json
tests/: test_qdarktheme_with_qt.py  test_svg.py  test_util.py
tools/build_styles/: _main.py
