[project]
name = "kevinbotlib-theme"
version = "0.2.0"
description = "The theme of KevinbotLib"
authors = [
    { name = "Yunosuke Ohsugi", email = "63651161+5yutan5@users.noreply.github.com" },
    { name = "Kevin Ahr", email = "meowmeowahr@gmail.com" },
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "qt",
    "stylesheets",
    "dark-theme",
    "kevinbotlib",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["darkdetect~=0.8.0"]

[project.urls]
Homepage = "https://github.com/meowmeowahr/kevinbotlib-theme"
Repository = "https://github.com/meowmeowahr/kevinbotlib-theme"
Documentation = "https://pyqtdarktheme.readthedocs.io"

[dependency-groups]
dev = [
    "black~=25.11.0",
    "isort~=7.0.0",
    "pre-commit~=4.5.0",
    "PySide6",
]
flake8 = [
    "flake8~=5.0.4,<6",
    "flake8-return~=1.1.3,<2",
    "flake8-pie~=0.16.0,<0.17",
    "flake8-print~=5.0.0,<6",
    "flake8-docstrings~=1.6.0,<2",
    "flake8-bugbear~=22.10.25,<23",
    "flake8-simplify~=0.19.3,<0.20",
    "flake8-comprehensions~=3.10.0,<4",
    "flake8-eradicate~=1.4.0,<2",
    "flake8-rst-docstrings~=0.2.7,<0.3",
    "flake8-pyproject~=1.2.1,<2",
    "flake8-pytest-style~=1.6.0,<2",
    "pep8-naming~=0.13.2",
]
test = [
    "pytest~=9.0.1",
    "pytest-cov~=7.0.0",
    "pytest-randomly~=4.0.1",
    "pytest-qt~=4.5.0",
    "pytest-xvfb~=3.1.1",
    "pytest-mock~=3.15.1",
]
docs = [
    "Sphinx~=4.3.1,<5",
    "rstcheck[toml]~=6.1.0,<7",
    "pydata-sphinx-theme~=0.11.0",
    "sphinx-design~=0.3.0",
    "sphinx-copybutton~=0.5.0",
]
github-actions = ["pytest-github-actions-annotate-failures~=0.1.7"]

[tool.uv]
default-groups = [
    "dev",
    "flake8",
    "test",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["qdarktheme"]

[tool.hatch.build.targets.wheel]
include = ["qdarktheme"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
max-line-length = 104
max-complexity = 7
docstring-convention = "google"
per-file-ignores = ["**/__init__.py:F401", "examples/**:D103,D100"]

# See https://github.com/peterjc/flake8-rst-docstrings#configuration
extend-ignore = ["RST201", "RST203", "RST301"]

[tool.black]
line-length = 104

[tool.isort]
profile = "black"
line_length = 104

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["examples"]
